--- a/llama-astra-pwa/package.json
+++ b/llama-astra-pwa/package.json
@@ -4,14 +4,11 @@
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-scripts": "5.0.1",
     "react-webcam": "^7.2.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -41,7 +38,10 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@types/jest": "^29.5.14",
     "@types/react": "^19.1.6",
-    "@types/react-dom": "^19.1.6"
+    "@types/react-dom": "^19.1.6",
+    "react-scripts": "^5.0.1"
   }
 }
