--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,8 @@
 {
   "short_name": "Llama Astra Cam",
   "name": "Llama Astra Camera PWA",
+  "description": "AI-powered visual assistant using camera and speech recognition",
+  "categories": ["productivity", "utilities", "photo"],
   "icons": [
     {
       "src": "favicon.ico",
@@ -21,5 +23,6 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "orientation": "portrait-primary"
 } 
