--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "typeRoots": ["node_modules/@types", "src"]
+    "typeRoots": ["node_modules/@types", "src"],
+    "types": ["jest"]
   },
   "include": ["src"]
 } 
